# spotify-project

./: .gitignore  README.md  analysis.ipynb  demonstration.ipynb  environment.yml  playground.ipynb  prototyping.ipynb  pyproject.toml  requirements.txt
.github/workflows/: pytest-3-11.yml  pytest-3-13.yml  pytest.yml
data/: api_res_2025-03-28.csv  api_res_2025-03-31.csv  playlists.csv  playlists_2025-03-31.csv  playlists_2025-05-31.csv  tracks.csv  year_styles.json
src/: playlists.py  playlists_handler.py  test_handler.py  test_src.py  tests.py
src/spmpls/: __init__.py  genres.py  playlists.py
tests/: test_handler.py  test_src.py
